[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/end_day_report.gd" type="Script" id=1]

[node name="end_day_report" type="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 143.0
margin/top = 105.0
margin/right = 882.0
margin/bottom = 490.0
popup/exclusive = false
window/title = "End of Day Report"
script/script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 7.0
margin/right = 726.0
margin/bottom = 368.0
tab_align = 0
tabs_visible = true

[node name="Incidents" type="Container" parent="TabContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 24.0
margin/right = 4.0
margin/bottom = 4.0

[node name="next_button" type="Button" parent="TabContainer/Incidents"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 613.0
margin/top = 274.0
margin/right = 703.0
margin/bottom = 322.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Next"
flat = false

[node name="Employees" type="Container" parent="TabContainer"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 24.0
margin/right = 4.0
margin/bottom = 4.0

[node name="next_day_button" type="Button" parent="TabContainer/Employees"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 613.0
margin/top = 274.0
margin/right = 703.0
margin/bottom = 322.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Next Day"
flat = false

[connection signal="about_to_show" from="." to="." method="_on_end_day_report_about_to_show"]

[connection signal="pressed" from="TabContainer/Incidents/next_button" to="." method="_on_next_button_pressed"]

[connection signal="pressed" from="TabContainer/Employees/next_day_button" to="." method="_on_next_day_button_pressed"]


